fixed css issue with the scrollbar pushing content and made the nav links extacly at the middle

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 
 html {
 	font-family: 'Montserrat', sans-serif;
+	scrollbar-gutter: stable;
 }
 
 :root {
